Bug 66466: No cross-folder navigation using Next Unread Thread; based upon an old 2002 patch by Travis Crump <pretzalz@techhouse.org>, r=Neil, sr=bienvenu